--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="bottom-container">
         <a class="footer-link" target="_blank" href="https://www.linkedin.com/in/palash-bharati-57ab5019a/">LinkedIn</a>
-        <a class="footer-link" target="_blank" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" target="_blank" href="https://twitter.com/BharatiPalash">Twitter</a>
         <a class="footer-link" target="_blank" href="https://www.appbrewery.co/">Website</a>
         <p>© 2021 Palash.</p>
     </div>
